fixed horizontal scroll of landing page in mobile

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -13,7 +13,7 @@ h3 {
 }
 
 .slick-slide > div {
-  margin: 0 56px;
+  margin: 0 10px;
 }
 .slick-list {
   margin: 0 -56px;
